@@ -48,13 +48,15 @@ import com.google.devtools.build.lib.packages.NoSuchPackageException;
 import com.google.devtools.build.lib.packages.NoSuchTargetException;
 import com.google.devtools.build.lib.packages.Package;
 import com.google.devtools.build.lib.packages.PackageOverheadEstimator;
+import com.google.devtools.build.lib.packages.PackagePiece;
+import com.google.devtools.build.lib.packages.PackagePieceIdentifier;
 import com.google.devtools.build.lib.packages.PackageValidator;
 import com.google.devtools.build.lib.packages.PackageValidator.InvalidPackageException;
+import com.google.devtools.build.lib.packages.Packageoid;
 import com.google.devtools.build.lib.packages.RuleVisibility;
 import com.google.devtools.build.lib.packages.semantics.BuildLanguageOptions;
 import com.google.devtools.build.lib.pkgcache.PackageOptions;
 import com.google.devtools.build.lib.pkgcache.PathPackageLocator;
-import com.google.devtools.build.lib.rules.repository.RepositoryDelegatorFunction;
 import com.google.devtools.build.lib.runtime.QuiescingExecutorsImpl;
 import com.google.devtools.build.lib.server.FailureDetails.PackageLoading;
 import com.google.devtools.build.lib.skyframe.GlobsValue.GlobRequest;
@@ -86,6 +88,7 @@ import com.google.devtools.build.skyframe.RecordingDifferencer;
 import com.google.devtools.build.skyframe.SkyKey;
 import com.google.devtools.build.skyframe.SkyValue;
 import com.google.devtools.common.options.Options;
+import com.google.errorprone.annotations.CanIgnoreReturnValue;
 import com.google.testing.junit.testparameterinjector.TestParameter;
 import com.google.testing.junit.testparameterinjector.TestParameterInjector;
 import java.io.IOException;
@@ -95,7 +98,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.OptionalLong;
 import java.util.Set;
 import java.util.UUID;
@@ -126,6 +128,10 @@ public class PackageFunctionTest extends BuildViewTestCase {
   @Mock private PackageOverheadEstimator mockPackageOverheadEstimator;
 
   @TestParameter private boolean globUnderSingleDep;
+
+  // If true, use PackagePieceIdentifier.ForBuildFile as the key, and retrieve the result as a
+  // PackagePiece.ForBuildFile.
+  @TestParameter private boolean computePackagePiece;
 
   private final CustomInMemoryFs fs = new CustomInMemoryFs(new ManualClock());
 
@@ -169,48 +175,59 @@ public class PackageFunctionTest extends BuildViewTestCase {
     return mockPackageOverheadEstimator;
   }
 
-  private Package validPackageWithoutErrors(SkyKey skyKey) throws InterruptedException {
-    return validPackageInternal(skyKey, /*checkPackageError=*/ true);
+  @CanIgnoreReturnValue
+  private Packageoid validPackageoidWithoutErrors(String pkg) throws InterruptedException {
+    return validPackageoidInternal(pkg, /* checkError= */ true);
   }
 
-  private Package validPackage(SkyKey skyKey) throws InterruptedException {
-    return validPackageInternal(skyKey, /*checkPackageError=*/ false);
+  @CanIgnoreReturnValue
+  private Packageoid validPackageoid(String pkg) throws InterruptedException {
+    return validPackageoidInternal(pkg, /* checkError= */ false);
   }
 
-  private Package validPackageInternal(SkyKey skyKey, boolean checkPackageError)
+  private Packageoid validPackageoidInternal(String pkg, boolean checkError)
       throws InterruptedException {
+    SkyKey skyKey = getSkyKey(pkg);
     SkyframeExecutor skyframeExecutor = getSkyframeExecutor();
-    skyframeExecutor.injectExtraPrecomputedValues(
-        ImmutableList.of(
-            PrecomputedValue.injected(
-                RepositoryDelegatorFunction.RESOLVED_FILE_INSTEAD_OF_WORKSPACE, Optional.empty())));
-    EvaluationResult<PackageValue> result =
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(
-            skyframeExecutor, skyKey, /*keepGoing=*/ false, reporter);
+            skyframeExecutor, skyKey, /* keepGoing= */ false, reporter);
     if (result.hasError()) {
       fail(result.getError(skyKey).getException().getMessage());
     }
-    PackageValue value = result.get(skyKey);
-    if (checkPackageError) {
-      assertThat(value.getPackage().containsErrors()).isFalse();
+    Packageoid value = result.get(skyKey).getPackageoid();
+    if (skyKey instanceof PackageIdentifier) {
+      assertThat(value).isInstanceOf(Package.class);
+    } else {
+      assertThat(value).isInstanceOf(PackagePiece.ForBuildFile.class);
     }
-    return value.getPackage();
+    if (checkError) {
+      assertThat(value.containsErrors()).isFalse();
+    }
+    return value;
   }
 
-  private Exception evaluatePackageToException(String pkg) throws Exception {
-    return evaluatePackageToException(pkg, /*keepGoing=*/ false);
+  private SkyKey getSkyKey(String pkg) {
+    PackageIdentifier pkgId = PackageIdentifier.createInMainRepo(pkg);
+    return computePackagePiece ? new PackagePieceIdentifier.ForBuildFile(pkgId) : pkgId;
+  }
+
+  @CanIgnoreReturnValue
+  private Exception evaluatePackageoidToException(String pkg) throws Exception {
+    return evaluatePackageoidToException(pkg, /* keepGoing= */ false);
   }
 
   /**
-   * Helper that evaluates the given package and returns the expected exception.
+   * Helper that evaluates the given package or package piece and returns the expected exception.
    *
    * <p>Disables the failFastHandler as a side-effect.
    */
-  private Exception evaluatePackageToException(String pkg, boolean keepGoing) throws Exception {
+  @CanIgnoreReturnValue
+  private Exception evaluatePackageoidToException(String pkg, boolean keepGoing) throws Exception {
     reporter.removeHandler(failFastHandler);
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo(pkg);
-    EvaluationResult<PackageValue> result =
+    SkyKey skyKey = getSkyKey(pkg);
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(getSkyframeExecutor(), skyKey, keepGoing, reporter);
     assertThat(result.hasError()).isTrue();
     return result.getError(skyKey).getException();
@@ -219,6 +236,8 @@ public class PackageFunctionTest extends BuildViewTestCase {
   @Before
   @Override
   public final void initializeSkyframeExecutor() throws Exception {
+    when(mockPackageValidator.getPackageLimits())
+        .thenReturn(Package.Builder.PackageLimits.DEFAULTS);
     initializeSkyframeExecutor(
         /* doPackageLoadingChecks= */ true,
         /* diffAwarenessFactories= */ ImmutableList.of(),
@@ -227,12 +246,46 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
   @Test
   public void testValidPackage() throws Exception {
-    scratch.file("pkg/BUILD");
-    validPackageWithoutErrors(PackageIdentifier.createInMainRepo("pkg"));
+    scratch.file("pkg/BUILD", "cc_library(name = 'foo')");
+    Packageoid pkg = validPackageoidWithoutErrors("pkg");
+    assertThat(pkg.getTargets()).containsKey("foo");
+  }
+
+  @Test
+  public void symbolicMacroExpansion_onlyInFullPackages() throws Exception {
+    scratch.file(
+        "pkg/macro.bzl",
+        """
+        def legacy(name, visibility = None, **kwargs):
+            native.cc_library(name = name, visibility = visibility, **kwargs)
+
+        symbolic = macro(
+            implementation = legacy,
+        )
+        """);
+    scratch.file(
+        "pkg/BUILD",
+        """
+        load(":macro.bzl", "legacy", "symbolic")
+        legacy(name = "target_in_legacy_macro")
+        symbolic(name = "target_in_symbolic_macro")
+        """);
+    Packageoid pkg = validPackageoidWithoutErrors("pkg");
+    assertThat(pkg.getTargets()).containsKey("target_in_legacy_macro");
+    if (computePackagePiece) {
+      assertThat(pkg.getTargets()).doesNotContainKey("target_in_symbolic_macro");
+    } else {
+      assertThat(pkg.getTargets()).containsKey("target_in_symbolic_macro");
+    }
   }
 
   @Test
   public void testInvalidPackage() throws Exception {
+    if (computePackagePiece) {
+      // TODO(https://github.com/bazelbuild/bazel/issues/23852): test requires package piece
+      // validation.
+      return;
+    }
     scratch.file("pkg/BUILD", "filegroup(name='foo', srcs=['foo.sh'])");
     scratch.file("pkg/foo.sh");
 
@@ -250,7 +303,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     invalidatePackages();
 
-    Exception ex = evaluatePackageToException("pkg");
+    Exception ex = evaluatePackageoidToException("pkg");
     assertThat(ex).isInstanceOf(InvalidPackageException.class);
     assertThat(ex).hasMessageThat().contains("no such package 'pkg': no good");
     assertContainsEvent("warning event");
@@ -258,6 +311,11 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
   @Test
   public void testPackageOverheadPassedToValidationLogic() throws Exception {
+    if (computePackagePiece) {
+      // TODO(https://github.com/bazelbuild/bazel/issues/23852): test requires package piece
+      // validation.
+      return;
+    }
     scratch.file("pkg/BUILD", "# Contents doesn't matter, it's all fake");
 
     when(mockPackageOverheadEstimator.estimatePackageOverhead(any(Package.class)))
@@ -266,12 +324,11 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     invalidatePackages(true);
     reset(mockPackageValidator);
+    when(mockPackageValidator.getPackageLimits())
+        .thenReturn(Package.Builder.PackageLimits.DEFAULTS);
 
     SkyframeExecutorTestUtils.evaluate(
-        getSkyframeExecutor(),
-        PackageIdentifier.createInMainRepo("pkg"),
-        /* keepGoing= */ false,
-        reporter);
+        getSkyframeExecutor(), getSkyKey("pkg"), /* keepGoing= */ false, reporter);
 
     verify(mockPackageValidator).validate(packageCaptor.capture(), any(ExtendedEventHandler.class));
     List<Package> packages = packageCaptor.getAllValues();
@@ -280,6 +337,11 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
   @Test
   public void testSkyframeExecutorClearedPackagesResultsInReload() throws Exception {
+    if (computePackagePiece) {
+      // TODO(https://github.com/bazelbuild/bazel/issues/23852): test requires package piece
+      // validation.
+      return;
+    }
     scratch.file("pkg/BUILD", "filegroup(name='foo', srcs=['foo.sh'])");
     scratch.file("pkg/foo.sh");
 
@@ -297,17 +359,17 @@ public class PackageFunctionTest extends BuildViewTestCase {
         .when(mockPackageValidator)
         .validate(any(Package.class), any(ExtendedEventHandler.class));
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-    EvaluationResult<PackageValue> result1 =
+    SkyKey skyKey = getSkyKey("pkg");
+    EvaluationResult<PackageoidValue> result1 =
         SkyframeExecutorTestUtils.evaluate(
-            getSkyframeExecutor(), skyKey, /*keepGoing=*/ false, reporter);
+            getSkyframeExecutor(), skyKey, /* keepGoing= */ false, reporter);
     assertThatEvaluationResult(result1).hasNoError();
 
     skyframeExecutor.clearLoadedPackages();
 
-    EvaluationResult<PackageValue> result2 =
+    EvaluationResult<PackageoidValue> result2 =
         SkyframeExecutorTestUtils.evaluate(
-            getSkyframeExecutor(), skyKey, /*keepGoing=*/ false, reporter);
+            getSkyframeExecutor(), skyKey, /* keepGoing= */ false, reporter);
     assertThatEvaluationResult(result2).hasNoError();
 
     assertThat(validationCount.get()).isEqualTo(2);
@@ -316,7 +378,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   @Test
   public void testPropagatesFilesystemInconsistencies() throws Exception {
     RecordingDifferencer differencer = getSkyframeExecutor().getDifferencerForTesting();
-    Root pkgRoot = getSkyframeExecutor().getPathEntries().get(0);
+    Root pkgRoot = getSkyframeExecutor().getPackagePathEntries().getFirst();
     Path fooBuildFile = scratch.file("foo/BUILD");
     Path fooDir = fooBuildFile.getParentDirectory();
 
@@ -370,7 +432,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     differencer.inject(
         ImmutableMap.of(FileStateValue.key(pkgRootedPath), Delta.justNew(fooDirValue)));
 
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
     String msg = ex.getMessage();
     assertThat(msg).contains("Inconsistent filesystem operations");
     assertThat(msg)
@@ -386,7 +448,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   @Test
   public void testPropagatesFilesystemInconsistencies_globbing() throws Exception {
     RecordingDifferencer differencer = getSkyframeExecutor().getDifferencerForTesting();
-    Root pkgRoot = getSkyframeExecutor().getPathEntries().get(0);
+    Root pkgRoot = getSkyframeExecutor().getPackagePathEntries().getFirst();
     scratch.file(
         "foo/BUILD",
         """
@@ -413,7 +475,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
                 DirectoryListingStateValue.create(
                     ImmutableList.of(new Dirent("baz", Dirent.Type.DIRECTORY))))));
 
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
     String msg = ex.getMessage();
     assertThat(msg).contains("Inconsistent filesystem operations");
     assertThat(msg).contains("/workspace/foo/bar/baz is no longer an existing directory");
@@ -434,7 +496,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     fs.scheduleMakeUnreadableAfterReaddir(barDir);
 
     Exception ex =
-        evaluatePackageToException(
+        evaluatePackageoidToException(
             "foo",
             // Use --keep_going, not --nokeep_going, semantics so as to exercise the situation we
             // want to exercise.
@@ -444,7 +506,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             // PackageValue node again, meaning we would do non-Skyframe globbing except this time
             // non-Skyframe globbing would encounter the io error, meaning there actually wouldn't
             // be a discrepancy.
-            /*keepGoing=*/ true);
+            /* keepGoing= */ true);
     String msg = ex.getMessage();
     assertThat(msg).contains("Inconsistent filesystem operations");
     assertThat(msg).contains("Encountered error '/workspace/foo/bar (Permission denied)'");
@@ -461,8 +523,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("foo/b.txt");
     scratch.file("foo/c/c.txt");
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     assertThat((Iterable<Label>) pkg.getTarget("foo").getAssociatedRule().getAttr("srcs"))
         .containsExactly(
             Label.parseCanonicalUnchecked("//foo:b.txt"),
@@ -474,7 +535,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/d.txt")).build(),
             Root.fromPath(rootDirectory));
-    pkg = validPackageWithoutErrors(skyKey);
+    pkg = validPackageoidWithoutErrors("foo");
     assertThat((Iterable<Label>) pkg.getTarget("foo").getAssociatedRule().getAttr("srcs"))
         .containsExactly(
             Label.parseCanonicalUnchecked("//foo:b.txt"),
@@ -489,8 +550,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("foo/b.txt");
     scratch.file("foo/a.config");
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:b.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:b.txt");
     scratch.overwriteFile(
         "foo/BUILD", "filegroup(name = 'foo', srcs = glob(['*.txt', '*.config']))");
     getSkyframeExecutor()
@@ -498,7 +558,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:a.config", "//foo:b.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:a.config", "//foo:b.txt");
     scratch.overwriteFile(
         "foo/BUILD", "filegroup(name = 'foo', srcs = glob(['*.txt', '*.config'])) # comment");
     getSkyframeExecutor()
@@ -506,7 +566,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:a.config", "//foo:b.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:a.config", "//foo:b.txt");
     getSkyframeExecutor().resetEvaluator();
     PackageOptions packageOptions = Options.getDefaults(PackageOptions.class);
     packageOptions.defaultVisibility = RuleVisibility.PUBLIC;
@@ -526,7 +586,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             tsgm);
     getSkyframeExecutor().injectExtraPrecomputedValues(analysisMock.getPrecomputedValues());
     getSkyframeExecutor().setActionEnv(ImmutableMap.of());
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:a.config", "//foo:b.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:a.config", "//foo:b.txt");
   }
 
   @Test
@@ -534,8 +594,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("foo/BUILD", "filegroup(name = 'foo', srcs = glob(['*.txt']))");
     scratch.file("foo/@f.txt");
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:@f.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:@f.txt");
 
     scratch.overwriteFile("foo/BUILD", "filegroup(name = 'foo', srcs = glob(['*.txt'])) # comment");
     getSkyframeExecutor()
@@ -543,7 +602,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
-    assertSrcs(validPackageWithoutErrors(skyKey), "foo", "//foo:@f.txt");
+    assertSrcs(validPackageoidWithoutErrors("foo"), "foo", "//foo:@f.txt");
   }
 
   /**
@@ -580,8 +639,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     FileSystemUtils.ensureSymbolicLink(
         scratch.resolve("foo/subdir_link"), externalTarget.getParentDirectory());
     preparePackageLoading(rootDirectory);
-    SkyKey fooKey = PackageIdentifier.createInMainRepo("foo");
-    Package fooPkg = validPackageWithoutErrors(fooKey);
+    Packageoid fooPkg = validPackageoidWithoutErrors("foo");
     assertSrcs(fooPkg, "foo", "//foo:link.sh", "//foo:ordinary.sh");
     assertSrcs(fooPkg, "bar", "//foo:link.sh");
     assertSrcs(fooPkg, "baz", "//foo:subdir_link/target.txt");
@@ -608,14 +666,14 @@ public class PackageFunctionTest extends BuildViewTestCase {
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
-    Package fooPkg2 = validPackageWithoutErrors(fooKey);
+    Packageoid fooPkg2 = validPackageoidWithoutErrors("foo");
     assertThat(fooPkg2).isNotEqualTo(fooPkg);
     assertSrcs(fooPkg2, "foo", "//foo:link.sh", "//foo:ordinary.sh");
     assertSrcs(fooPkg2, "bar", "//foo:link.sh");
     assertSrcs(fooPkg2, "baz", "//foo:subdir_link/target.txt");
   }
 
-  private static void assertSrcs(Package pkg, String targetName, String... expected)
+  private static void assertSrcs(Packageoid pkg, String targetName, String... expected)
       throws NoSuchTargetException {
     List<Label> expectedLabels = new ArrayList<>();
     for (String item : expected) {
@@ -625,7 +683,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   }
 
   @SuppressWarnings("unchecked")
-  private static Iterable<Label> getSrcs(Package pkg, String targetName)
+  private static Iterable<Label> getSrcs(Packageoid pkg, String targetName)
       throws NoSuchTargetException {
     return (Iterable<Label>) pkg.getTarget(targetName).getAssociatedRule().getAttr("srcs");
   }
@@ -655,15 +713,14 @@ public class PackageFunctionTest extends BuildViewTestCase {
         )
         """);
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     scratch.file("foo/irrelevant");
     getSkyframeExecutor()
         .invalidateFilesUnderPathForTesting(
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/irrelevant")).build(),
             Root.fromPath(rootDirectory));
-    assertThat(validPackageWithoutErrors(skyKey)).isSameInstanceAs(pkg);
+    assertThat(validPackageoidWithoutErrors("foo")).isSameInstanceAs(pkg);
   }
 
   @Test
@@ -694,15 +751,14 @@ public class PackageFunctionTest extends BuildViewTestCase {
         )
         """);
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     scratch.file("foo/irrelevant");
     getSkyframeExecutor()
         .invalidateFilesUnderPathForTesting(
             reporter,
             ModifiedFileSet.builder().modify(PathFragment.create("foo/irrelevant")).build(),
             Root.fromPath(rootDirectory));
-    assertThat(validPackageWithoutErrors(skyKey)).isSameInstanceAs(pkg);
+    assertThat(validPackageoidWithoutErrors("foo")).isSameInstanceAs(pkg);
   }
 
   @Test
@@ -725,8 +781,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     // must be done after preparePackageLoading()
     setBuildLanguageOptions("--experimental_enable_scl_dialect=true");
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     assertThat(pkg.getDeclarations().getOrComputeTransitivelyLoadedStarlarkFiles())
         .containsExactly(
             Label.parseCanonical("//bar:ext.bzl"), Label.parseCanonical("//baz:ext.scl"));
@@ -744,7 +799,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("bar/ext.bzl")).build(),
             Root.fromPath(rootDirectory));
 
-    pkg = validPackageWithoutErrors(skyKey);
+    pkg = validPackageoidWithoutErrors("foo");
     assertThat(pkg.getDeclarations().getOrComputeTransitivelyLoadedStarlarkFiles())
         .containsExactly(
             Label.parseCanonical("//bar:ext.bzl"), Label.parseCanonical("//qux:ext.bzl"));
@@ -755,7 +810,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("test/starlark/BUILD", "load('//test/starlark:bad_extension.bzl', 'some_symbol')");
     invalidatePackages();
 
-    Exception ex = evaluatePackageToException("test/starlark");
+    Exception ex = evaluatePackageoidToException("test/starlark");
     assertThat(ex)
         .hasMessageThat()
         .isEqualTo(
@@ -777,7 +832,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("test/starlark/BUILD", "load('//test/starlark:extension.bzl', 'a')");
     invalidatePackages();
 
-    Exception ex = evaluatePackageToException("test/starlark");
+    Exception ex = evaluatePackageoidToException("test/starlark");
     assertThat(ex)
         .hasMessageThat()
         .isEqualTo(
@@ -801,7 +856,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
         """);
     scratch.file("pkg/BUILD");
 
-    Exception ex = evaluatePackageToException("pkg");
+    Exception ex = evaluatePackageoidToException("pkg");
     assertThat(ex)
         .hasMessageThat()
         .isEqualTo(
@@ -819,7 +874,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("test/starlark/BUILD", "load('//test/starlark:extension.bzl', 'a')");
     invalidatePackages();
 
-    Exception ex = evaluatePackageToException("test/starlark");
+    Exception ex = evaluatePackageoidToException("test/starlark");
     assertThat(ex)
         .hasMessageThat()
         .isEqualTo(
@@ -837,7 +892,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     Path barBuildFile = scratch.file("foo/bar/BUILD");
     fs.stubStatError(barBuildFile, new IOException("nope"));
 
-    evaluatePackageToException("foo");
+    evaluatePackageoidToException("foo");
     assertContainsEvent("nope");
   }
 
@@ -854,7 +909,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
         load("a.bzl", "b")
         load("subdir/a.bzl", "c")
         """);
-    validPackageWithoutErrors(PackageIdentifier.createInMainRepo("p"));
+    validPackageoidWithoutErrors("p");
   }
 
   // See WorkspaceFileFunctionTest for tests that exercise load('@repo...').
@@ -863,7 +918,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   public void testLoadBadLabel() throws Exception {
     scratch.file("p/BUILD", "load('this\tis not a label', 'a')");
     reporter.removeHandler(failFastHandler);
-    SkyKey key = PackageIdentifier.createInMainRepo("p");
+    SkyKey key = getSkyKey("p");
     SkyframeExecutorTestUtils.evaluate(skyframeExecutor, key, /*keepGoing=*/ false, reporter);
     assertContainsEvent(
         "in load statement: invalid target name 'this<?>is not a label': target names may not"
@@ -874,7 +929,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   public void testLoadFromExternalPackage() throws Exception {
     scratch.file("p/BUILD", "load('//external:file.bzl', 'a')");
     reporter.removeHandler(failFastHandler);
-    SkyKey key = PackageIdentifier.createInMainRepo("p");
+    SkyKey key = getSkyKey("p");
     SkyframeExecutorTestUtils.evaluate(skyframeExecutor, key, /*keepGoing=*/ false, reporter);
     assertContainsEvent("Starlark files may not be loaded from the //external package");
   }
@@ -883,7 +938,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   public void testLoadWithoutBzlSuffix() throws Exception {
     scratch.file("p/BUILD", "load('//p:file.starlark', 'a')");
     reporter.removeHandler(failFastHandler);
-    SkyKey key = PackageIdentifier.createInMainRepo("p");
+    SkyKey key = getSkyKey("p");
     SkyframeExecutorTestUtils.evaluate(skyframeExecutor, key, /*keepGoing=*/ false, reporter);
     assertContainsEvent("The label must reference a file with extension \".bzl\"");
   }
@@ -904,7 +959,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
         """);
 
     reporter.removeHandler(failFastHandler);
-    Exception ex = evaluatePackageToException("a");
+    Exception ex = evaluatePackageoidToException("a");
     assertThat(ex)
         .hasMessageThat()
         .contains(
@@ -929,7 +984,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
         x = 1
         """);
 
-    validPackageWithoutErrors(PackageIdentifier.createInMainRepo("a"));
+    validPackageoidWithoutErrors("a");
     assertContainsEvent("Starlark file //b:foo.bzl is not visible for loading from package //a.");
     assertContainsEvent("Continuing because --nocheck_bzl_visibility is active");
   }
@@ -947,10 +1002,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     // exceptions (similar to b/26382502). So let's just look for the error event instead of
     // asserting on the exception.
     SkyframeExecutorTestUtils.evaluate(
-        getSkyframeExecutor(),
-        PackageIdentifier.createInMainRepo("a"),
-        /* keepGoing= */ false,
-        reporter);
+        getSkyframeExecutor(), getSkyKey("a"), /* keepGoing= */ false, reporter);
     assertContainsEvent("name 'visibility' is not defined");
   }
 
@@ -974,10 +1026,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     reporter.removeHandler(failFastHandler);
     SkyframeExecutorTestUtils.evaluate(
-        getSkyframeExecutor(),
-        PackageIdentifier.createInMainRepo("a"),
-        /* keepGoing= */ false,
-        reporter);
+        getSkyframeExecutor(), getSkyKey("a"), /* keepGoing= */ false, reporter);
     assertContainsEvent(
         "visibility() can only be used during .bzl initialization (top-level evaluation)");
   }
@@ -993,8 +1042,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     preparePackageLoading(rootDirectory);
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     assertThat(pkg.containsErrors()).isFalse();
     assertThat(pkg.getTarget("existing.txt").getName()).isEqualTo("existing.txt");
     assertThrows(NoSuchTargetException.class, () -> pkg.getTarget("dangling.txt"));
@@ -1012,7 +1060,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    Package pkg2 = validPackageWithoutErrors(skyKey);
+    Packageoid pkg2 = validPackageoidWithoutErrors("foo");
     assertThat(pkg2.containsErrors()).isFalse();
     assertThat(pkg2.getTarget("existing.txt").getName()).isEqualTo("existing.txt");
     assertThrows(NoSuchTargetException.class, () -> pkg2.getTarget("dangling.txt"));
@@ -1027,7 +1075,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("foo/nope")).build(),
             Root.fromPath(rootDirectory));
 
-    Package newPkg = validPackageWithoutErrors(skyKey);
+    Packageoid newPkg = validPackageoidWithoutErrors("foo");
     assertThat(newPkg.containsErrors()).isFalse();
     assertThat(newPkg.getTarget("existing.txt").getName()).isEqualTo("existing.txt");
     // Another consequence of the bug is that change pruning would incorrectly cut off changes that
@@ -1048,8 +1096,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     preparePackageLoading(rootDirectory);
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("foo");
-    Package pkg = validPackageWithoutErrors(skyKey);
+    Packageoid pkg = validPackageoidWithoutErrors("foo");
     assertThat(pkg.containsErrors()).isFalse();
     assertThat(pkg.getTarget("bar-matched").getName()).isEqualTo("bar-matched");
     assertThrows(NoSuchTargetException.class, () -> pkg.getTarget("-matched"));
@@ -1069,7 +1116,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("foo/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    Package pkg2 = validPackageWithoutErrors(skyKey);
+    Packageoid pkg2 = validPackageoidWithoutErrors("foo");
     assertThat(pkg2.containsErrors()).isFalse();
     assertThat(pkg2.getTarget("bar-matched").getName()).isEqualTo("bar-matched");
     assertThrows(NoSuchTargetException.class, () -> pkg2.getTarget("-matched"));
@@ -1081,7 +1128,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     IOException exn = new IOException("nope");
     fs.throwExceptionOnGetInputStream(fooBuildFilePath, exn);
 
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
     assertThat(ex).hasMessageThat().contains("nope");
     assertThat(ex).isInstanceOf(NoSuchPackageException.class);
     assertThat(ex).hasCauseThat().isInstanceOf(IOException.class);
@@ -1093,7 +1140,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("foo/bar");
 
     // There is no foo/BUILD file, but we enforce loading package 'foo'.
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
     assertThat(ex)
         .hasMessageThat()
         .contains(
@@ -1126,7 +1173,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     // There is no foo/BUILD file under both `package_path`s foo directory, but we enforce loading
     // package 'foo'.
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
 
     assertThat(ex)
         .hasMessageThat()
@@ -1147,7 +1194,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     IOException exn = new IOException("nope");
     fs.throwExceptionOnGetInputStream(fooBzlFilePath, exn);
 
-    Exception ex = evaluatePackageToException("foo");
+    Exception ex = evaluatePackageoidToException("foo");
     assertThat(ex).hasMessageThat().contains("nope");
     assertThat(ex).isInstanceOf(NoSuchPackageException.class);
     assertThat(ex).hasCauseThat().isInstanceOf(IOException.class);
@@ -1163,12 +1210,12 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/foo/sub/BUILD");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg/foo");
-    EvaluationResult<PackageValue> result =
+    SkyKey skyKey = getSkyKey("pkg/foo");
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(
             getSkyframeExecutor(), skyKey, /* keepGoing= */ false, reporter);
     assertThatEvaluationResult(result).hasNoError();
-    assertThat(result.get(skyKey).getPackage().containsErrors()).isTrue();
+    assertThat(result.get(skyKey).getPackageoid().containsErrors()).isTrue();
     assertContainsEvent(
         "Label '//pkg/foo:sub/bar/blah' is invalid because 'pkg/foo/sub' is a subpackage; perhaps"
             + " you meant to put the colon here: '//pkg/foo/sub:bar/blah'?");
@@ -1192,12 +1239,12 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg/foo");
-    EvaluationResult<PackageValue> result =
+    SkyKey skyKey = getSkyKey("pkg/foo");
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(
             getSkyframeExecutor(), skyKey, /* keepGoing= */ false, reporter);
     assertThatEvaluationResult(result).hasNoError();
-    assertThat(result.get(skyKey).getPackage().containsErrors()).isTrue();
+    assertThat(result.get(skyKey).getPackageoid().containsErrors()).isTrue();
 
     // Only the deepest package that crosses subpackage boundary should be displayed in the error
     // message.
@@ -1220,7 +1267,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     FileSystemUtils.ensureSymbolicLink(subBuildFilePath, subBuildFilePath);
     invalidatePackages();
 
-    Exception ex = evaluatePackageToException("pkg");
+    Exception ex = evaluatePackageoidToException("pkg");
     assertThat(ex).isInstanceOf(BuildFileNotFoundException.class);
     assertThat(ex)
         .hasMessageThat()
@@ -1257,10 +1304,10 @@ public class PackageFunctionTest extends BuildViewTestCase {
     // the non-Skyframe globbing error, but for the label crossing event to *not* get added (because
     // the globbing IOException would put Package.Builder in a state on which we cannot run
     // handleLabelsCrossingSubpackagesAndPropagateInconsistentFilesystemExceptions).
-    SkyKey pkgKey = PackageIdentifier.createInMainRepo("pkg");
-    EvaluationResult<PackageValue> result =
+    SkyKey pkgKey = getSkyKey("pkg");
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(
-            getSkyframeExecutor(), pkgKey, /*keepGoing=*/ true, reporter);
+            getSkyframeExecutor(), pkgKey, /* keepGoing= */ true, reporter);
     assertThatEvaluationResult(result)
         .hasErrorEntryForKeyThat(pkgKey)
         .hasExceptionThat()
@@ -1281,8 +1328,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'], allow_empty = 5)");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-    validPackage(skyKey);
+    validPackageoid("pkg");
 
     assertContainsEvent("expected boolean for argument `allow_empty`, got `5`");
   }
@@ -1292,8 +1338,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'], allow_empty=True)");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
   }
@@ -1306,8 +1351,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'])");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
   }
@@ -1318,9 +1362,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/blah.foo");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
 
@@ -1332,7 +1374,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             Root.fromPath(rootDirectory));
 
     reporter.removeHandler(failFastHandler);
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(
         "glob pattern '*.foo' didn't match anything, but allow_empty is set to False (the "
@@ -1348,9 +1390,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/blah.foo");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
 
@@ -1362,7 +1402,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             Root.fromPath(rootDirectory));
 
     reporter.removeHandler(failFastHandler);
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(
         "glob pattern '*.foo' didn't match anything, but allow_empty is set to False (the "
@@ -1373,11 +1413,9 @@ public class PackageFunctionTest extends BuildViewTestCase {
   public void testGlobDisallowEmpty_functionParam_wasEmptyAndStaysEmpty() throws Exception {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'], allow_empty=False)");
     invalidatePackages();
-
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
     reporter.removeHandler(failFastHandler);
 
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     String expectedEventString =
         "glob pattern '*.foo' didn't match anything, but allow_empty is set to False (the "
@@ -1391,7 +1429,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("pkg/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(expectedEventString);
   }
@@ -1404,10 +1442,9 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'])");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
     reporter.removeHandler(failFastHandler);
 
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     String expectedEventString =
         "glob pattern '*.foo' didn't match anything, but allow_empty is set to False (the "
@@ -1421,7 +1458,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("pkg/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(expectedEventString);
   }
@@ -1433,10 +1470,9 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/blah.foo");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
     reporter.removeHandler(failFastHandler);
 
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     String expectedEventString =
         "all files in the glob have been excluded, but allow_empty is set to False (the "
@@ -1452,7 +1488,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("pkg/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(expectedEventString);
   }
@@ -1467,10 +1503,9 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/blah.foo");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
     reporter.removeHandler(failFastHandler);
 
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     String expectedEventString =
         "all files in the glob have been excluded, but allow_empty is set to False (the "
@@ -1484,7 +1519,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
             ModifiedFileSet.builder().modify(PathFragment.create("pkg/BUILD")).build(),
             Root.fromPath(rootDirectory));
 
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(expectedEventString);
   }
@@ -1494,10 +1529,8 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'], allow_empty=False)");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-
     reporter.removeHandler(failFastHandler);
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
     assertContainsEvent(
         "glob pattern '*.foo' didn't match anything, but allow_empty is set to False (the "
@@ -1512,7 +1545,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     reporter.addHandler(failFastHandler);
     eventCollector.clear();
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
   }
@@ -1525,10 +1558,8 @@ public class PackageFunctionTest extends BuildViewTestCase {
     scratch.file("pkg/BUILD", "x = " + "glob(['*.foo'])");
     invalidatePackages();
 
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("pkg");
-
     reporter.removeHandler(failFastHandler);
-    Package pkg = validPackage(skyKey);
+    Packageoid pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isTrue();
 
     assertContainsEvent(
@@ -1544,7 +1575,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     reporter.addHandler(failFastHandler);
     eventCollector.clear();
-    pkg = validPackage(skyKey);
+    pkg = validPackageoid("pkg");
     assertThat(pkg.containsErrors()).isFalse();
     assertNoEvents();
   }
@@ -1559,8 +1590,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     // load p
     preparePackageLoading(rootDirectory);
-    SkyKey skyKey = PackageIdentifier.createInMainRepo("p");
-    Package p = validPackageWithoutErrors(skyKey);
+    Packageoid p = validPackageoidWithoutErrors("p");
 
     assertThat(toStrings(p.getDeclarations().getOrComputeTransitivelyLoadedStarlarkFiles()))
         .containsExactly("//p:a.bzl", "//p:b.bzl", "//p:c.bzl", "//p:d.bzl");
@@ -1584,8 +1614,8 @@ public class PackageFunctionTest extends BuildViewTestCase {
 
     // Note: syntax error (recovered), non-existent .bzl file.
     scratch.file("pkg/BUILD", "load('//does_not:exist.bzl', 'broken'");
-    SkyKey key = PackageIdentifier.createInMainRepo("pkg");
-    EvaluationResult<PackageValue> result =
+    SkyKey key = getSkyKey("pkg");
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(getSkyframeExecutor(), key, false, reporter);
     assertThatEvaluationResult(result).hasErrorEntryForKeyThat(key);
     assertContainsEvent("syntax error at 'newline': expected ,");
@@ -1609,10 +1639,10 @@ public class PackageFunctionTest extends BuildViewTestCase {
     assertThat(ioExnFromFS).hasMessageThat().contains("Too many levels of symbolic links");
 
     // Then, when we evaluate the PackageValue node for the Package in keepGoing mode,
-    SkyKey pkgKey = PackageIdentifier.createInMainRepo("foo");
-    EvaluationResult<PackageValue> result =
+    SkyKey pkgKey = getSkyKey("foo");
+    EvaluationResult<PackageoidValue> result =
         SkyframeExecutorTestUtils.evaluate(
-            getSkyframeExecutor(), pkgKey, /*keepGoing=*/ true, reporter);
+            getSkyframeExecutor(), pkgKey, /* keepGoing= */ true, reporter);
     // The result is a *non-transient* Skyframe error.
     assertThatEvaluationResult(result).hasErrorEntryForKeyThat(pkgKey).isNotTransient();
     // And that error is a NoSuchPackageException
@@ -1683,7 +1713,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
   public void testGlobbingSkyframeDependencyStructure() throws Exception {
     reporter.removeHandler(failFastHandler);
 
-    Root pkgRoot = getSkyframeExecutor().getPathEntries().get(0);
+    Root pkgRoot = getSkyframeExecutor().getPackagePathEntries().getFirst();
 
     Path fooBuildPath =
         scratch.file("foo/BUILD", "glob(['dir/*.sh'])", "subpackages(include = ['subpkg/**'])");
@@ -1695,7 +1725,7 @@ public class PackageFunctionTest extends BuildViewTestCase {
     Path fooSubpkgPath = fooBuildPath.getParentDirectory().getChild("subpkg");
     scratch.file("foo/subpkg/BUILD");
 
-    SkyKey pkgKey = PackageIdentifier.createInMainRepo("foo");
+    SkyKey pkgKey = getSkyKey("foo");
     SkyframeExecutorTestUtils.evaluate(
         getSkyframeExecutor(), pkgKey, /* keepGoing= */ true, reporter);
 
